--- a/NemoRx1/test-output/old/Default suite/reporter-output.html
+++ b/NemoRx1/test-output/old/Default suite/reporter-output.html
@@ -1,8 +1,90 @@
 <h2>Reporter output</h2><table><tr><td>Successfully login completed</td></tr>
 <tr><td>Page Title-NEMORx</td></tr>
-<tr><td>Name of patient==YBLKXSZI</td></tr>
+<tr><td>Clicked on Alertbell</td></tr>
+<tr><td>Alertbell window Opened</td></tr>
+<tr><td>Clicked on History button</td></tr>
+<tr><td>--Verifying options are available in 'History For'---</td></tr>
+<tr><td>**Refill Requests**</td></tr>
+<tr><td>**Rx Change Requests**</td></tr>
+<tr><td>**Prescriptions**</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Account Number-151234513</td></tr>
+<tr><td>FirstName-REHCWDNP</td></tr>
+<tr><td>Date of Birth-05/071971</td></tr>
+<tr><td>**Patient Added Successfully-Name Of the Patient--REHCWDNP REHCWDNP</td></tr>
+<tr><td>Name of patient==REHCWDNP</td></tr>
+<tr><td>Search for added patient</td></tr>
 <tr><td>Add medication Button = true</td></tr>
 <tr><td>Drug Selected</td></tr>
 <tr><td>Successfully added medication. Would you like to add another medication?</td></tr>
+<tr><td>Send Medication Button = true</td></tr>
+<tr><td>Medication Edit button = true</td></tr>
+<tr><td>Delete Medication Button = true</td></tr>
 <tr><td>Successfully created allergy. Would you like to add another allergy?</td></tr>
+<tr><td>Edit allergy Button = true</td></tr>
+<tr><td>Delete allergy Button = true</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Capitalize Prescription</td></tr>
+<tr><td>Print Patient's Address</td></tr>
+<tr><td>Two Signature Lines</td></tr>
+<tr><td>Initials Signature Line</td></tr>
+<tr><td>Print Title</td></tr>
+<tr><td>Print DPS</td></tr>
+<tr><td>Print NPI</td></tr>
+<tr><td>Print State License Number</td></tr>
+<tr><td>Print Comments</td></tr>
+<tr><td>Unchecked Capitalize Prescription</td></tr>
+<tr><td>Unchecked Initials Signature Line</td></tr>
+<tr><td>Unchecked Print DPS</td></tr>
+<tr><td>Unchecked Print Comments</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMO Health - My Applications</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Name of patient==YBLKXSZI</td></tr>
+<tr><td>Add medication Button = true</td></tr>
+<tr><td>Drug Selected</td></tr>
+<tr><td>The drug has already been added for this patient</td></tr>
+<tr><td>The allergy already exists for the patient</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Audit items link from side menu succesfully opened</td></tr>
+<tr><td>Grant request link from side succesfully opened</td></tr>
+<tr><td>Profile Link From Side Menu Successfully opened</td></tr>
+<tr><td>View/Export Signed Prescriptions link from side menu opened Succesfully</td></tr>
+<tr><td>Working hours link from side menu succesfully opened</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMO Health - My Applications</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Working hours link from side menu succesfully opened</td></tr>
+<tr><td>Alert message - Are you sure you want to remove this item?</td></tr>
+<tr><td>Work hour is deleted</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMO Health - My Applications</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Name of patient==rathnaa</td></tr>
+<tr><td>Send Medication Button = true</td></tr>
+<tr><td>Medication Edit button = true</td></tr>
+<tr><td>Delete Medication Button = true</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Name of patient==rathnaa</td></tr>
+<tr><td>Edit allergy Button = true</td></tr>
+<tr><td>Delete allergy Button = true</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMORx</td></tr>
+<tr><td>Logout Successfully completed</td></tr>
+<tr><td>Successfully login completed</td></tr>
+<tr><td>Page Title-NEMO Health - My Applications</td></tr>
 </table>
