Property added for all test

--- a/NemoRx1/test-output/old/Default suite/groups.html
+++ b/NemoRx1/test-output/old/Default suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Verification</td><td>TestScript_08.AllergiesButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@12bc6874]<br/>TestScript_08.MedicationsButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@12bc6874]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
