--- a/NemoRx1/test-output/old/Default suite/methods-alphabetical.html
+++ b/NemoRx1/test-output/old/Default suite/methods-alphabetical.html
@@ -1,54 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f9bcbd">  <td>19/05/08 11:05:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_06.AddPatientAndMedication()[pri:0, instance:com.NemoRx.TestScripts.TestScript_06@1c2c22f3]">AddPatientAndMedication</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="6884be">  <td>19/05/08 11:10:50</td>   <td>321165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@18e8568]">AddingWorkHour_deletingWorkHour</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="6884be">  <td>19/05/08 11:11:22</td>   <td>353339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@18e8568]">AddingWorkHour_deletingWorkHour</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="6884be">  <td>19/05/08 11:11:43</td>   <td>374831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@18e8568]">AddingWorkHour_deletingWorkHour</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="cf768c">  <td>19/05/08 11:04:53</td>   <td>-35556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScripts_07.AlertWindowVerification()[pri:0, instance:com.NemoRx.TestScripts.TestScripts_07@60215eee]">AlertWindowVerification</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="8da962">  <td>19/05/08 11:12:22</td>   <td>413411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_08.AllergiesButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@12bc6874]">AllergiesButtonsVerificationOnPatientChart</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="cda3c2">  <td>19/05/08 11:08:06</td>   <td>156913</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_05.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@ba4d54]">&lt;&lt;Close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="a8f0b4">  <td>19/05/08 11:09:08</td>   <td>219254</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_04.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@6aceb1a5]">&lt;&lt;Close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="60847b">  <td>19/05/08 11:10:32</td>   <td>303168</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_03.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@769c9116]">&lt;&lt;Close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="6884be">  <td>19/05/08 11:11:43</td>   <td>374844</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_02.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@18e8568]">&lt;&lt;Close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="8ddf77">  <td>19/05/08 11:14:01</td>   <td>512422</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_01.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@6956de9]">&lt;&lt;Close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="8ddf77">  <td>19/05/08 11:13:17</td>   <td>468648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@6956de9]">LoginAndLogout</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="8ddf77">  <td>19/05/08 11:13:40</td>   <td>491549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@6956de9]">LoginAndLogout</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="8da962">  <td>19/05/08 11:11:44</td>   <td>375540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_08.MedicationsButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@12bc6874]">MedicationsButtonsVerificationOnPatientChart</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="cda3c2">  <td>19/05/08 11:06:39</td>   <td>70802</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_05.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@ba4d54]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="a8f0b4">  <td>19/05/08 11:08:06</td>   <td>157569</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_04.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@6aceb1a5]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="60847b">  <td>19/05/08 11:09:08</td>   <td>219254</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_03.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@769c9116]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="6884be">  <td>19/05/08 11:10:32</td>   <td>303815</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_02.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@18e8568]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="8ddf77">  <td>19/05/08 11:13:00</td>   <td>451685</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_01.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@6956de9]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="cda3c2">  <td>19/05/08 11:07:00</td>   <td>90937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_05.RxPrintSettingsValidation(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@ba4d54]">RxPrintSettingsValidation</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="cda3c2">  <td>19/05/08 11:07:45</td>   <td>136048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_05.RxPrintSettingsValidation(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@ba4d54]">RxPrintSettingsValidation</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="a8f0b4">  <td>19/05/08 11:08:23</td>   <td>174120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_04.SearchPatientAddMedication(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@6aceb1a5]">SearchPatientAddMedication</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="60847b">  <td>19/05/08 11:09:27</td>   <td>238296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@769c9116]">VerifyingLinksFromSideMenu</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="60847b">  <td>19/05/08 11:10:11</td>   <td>282324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@769c9116]">VerifyingLinksFromSideMenu</td> 
-  <td>main@411631404</td>   <td></td> </tr>
-<tr bgcolor="60847b">  <td>19/05/08 11:10:32</td>   <td>303154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@769c9116]">VerifyingLinksFromSideMenu</td> 
-  <td>main@411631404</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/05/08 15:15:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_01.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@44e81672]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146848448</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/05/08 15:15:16</td>   <td>-42014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@44e81672]">LoginAndLogout</td> 
+  <td>main@1146848448</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/05/08 15:15:38</td>   <td>-20876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@44e81672]">LoginAndLogout</td> 
+  <td>main@1146848448</td>   <td></td> </tr>
+<tr bgcolor="cf768c">  <td>19/05/08 15:14:53</td>   <td>-65566</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_01.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@44e81672]">&gt;&gt;Open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146848448</td>   <td></td> </tr>
 </table>
