--- a/NemoRx1/test-output/old/Default suite/methods.html
+++ b/NemoRx1/test-output/old/Default suite/methods.html
@@ -1,10 +1,54 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cf768c">  <td>19/05/07 21:40:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_04.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@60215eee]">&gt;&gt;Open</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1638215613</td>   <td></td> </tr>
-<tr bgcolor="cf768c">  <td>19/05/07 21:40:39</td>   <td>20719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_04.SearchPatientAddMedication(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@60215eee]">SearchPatientAddMedication</td> 
-  <td>main@1638215613</td>   <td></td> </tr>
-<tr bgcolor="cf768c">  <td>19/05/07 21:41:14</td>   <td>55961</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_04.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@60215eee]">&lt;&lt;Close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1638215613</td>   <td></td> </tr>
+<tr bgcolor="d0a1cf">  <td>19/05/07 13:03:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScripts_07.AlertWindowVerification()[pri:0, instance:com.NemoRx.TestScripts.TestScripts_07@234bef66]">AlertWindowVerification</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="9a8472">  <td>19/05/07 13:03:38</td>   <td>37061</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_03.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@735b478]">&gt;&gt;Open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="9a8472">  <td>19/05/07 13:03:51</td>   <td>49854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@735b478]">VerifyingLinksFromSideMenu</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="9a8472">  <td>19/05/07 13:04:13</td>   <td>72307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@735b478]">VerifyingLinksFromSideMenu</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="9a8472">  <td>19/05/07 13:04:13</td>   <td>72339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_03.VerifyingLinksFromSideMenu(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@735b478]">VerifyingLinksFromSideMenu</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="9a8472">  <td>19/05/07 13:04:13</td>   <td>72357</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_03.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_03@735b478]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="6375b3">  <td>19/05/07 13:04:14</td>   <td>73081</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_02.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@3a03464]">&gt;&gt;Open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="6375b3">  <td>19/05/07 13:04:27</td>   <td>85761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@3a03464]">AddingWorkHour_deletingWorkHour</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="6375b3">  <td>19/05/07 13:04:57</td>   <td>116413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@3a03464]">AddingWorkHour_deletingWorkHour</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="6375b3">  <td>19/05/07 13:05:19</td>   <td>138113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_02.AddingWorkHour_deletingWorkHour(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@3a03464]">AddingWorkHour_deletingWorkHour</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="6375b3">  <td>19/05/07 13:05:19</td>   <td>138144</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_02.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_02@3a03464]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="7c7260">  <td>19/05/07 13:05:20</td>   <td>138933</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_01.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@9f70c54]">&gt;&gt;Open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="7c7260">  <td>19/05/07 13:05:32</td>   <td>151275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@9f70c54]">LoginAndLogout</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="7c7260">  <td>19/05/07 13:05:53</td>   <td>172189</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_01.LoginAndLogout(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@9f70c54]">LoginAndLogout</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="7c7260">  <td>19/05/07 13:06:14</td>   <td>193365</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_01.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_01@9f70c54]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="809079">  <td>19/05/07 13:06:15</td>   <td>194180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_06.AddPatientAndMedication()[pri:0, instance:com.NemoRx.TestScripts.TestScript_06@2c9f9fb0]">AddPatientAndMedication</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="df88bb">  <td>19/05/07 13:07:17</td>   <td>256369</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_05.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@52af6cff]">&gt;&gt;Open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="df88bb">  <td>19/05/07 13:07:31</td>   <td>269827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_05.RxPrintSettingsValidation(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@52af6cff]">RxPrintSettingsValidation</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="df88bb">  <td>19/05/07 13:07:58</td>   <td>297184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_05.RxPrintSettingsValidation(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@52af6cff]">RxPrintSettingsValidation</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="df88bb">  <td>19/05/07 13:07:58</td>   <td>297228</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_05.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_05@52af6cff]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="71769e">  <td>19/05/07 13:07:59</td>   <td>297974</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript_04.Open()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@737996a0]">&gt;&gt;Open</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="71769e">  <td>19/05/07 13:08:11</td>   <td>310465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_04.SearchPatientAddMedication(java.lang.String, java.lang.String)[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@737996a0]">SearchPatientAddMedication</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="71769e">  <td>19/05/07 13:08:46</td>   <td>345045</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript_04.Close()[pri:0, instance:com.NemoRx.TestScripts.TestScript_04@737996a0]">&lt;&lt;Close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="b2f6e2">  <td>19/05/07 13:08:47</td>   <td>345815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_08.MedicationsButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@531be3c5]">MedicationsButtonsVerificationOnPatientChart</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
+<tr bgcolor="b2f6e2">  <td>19/05/07 13:09:18</td>   <td>377307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript_08.AllergiesButtonsVerificationOnPatientChart()[pri:0, instance:com.NemoRx.TestScripts.TestScript_08@531be3c5]">AllergiesButtonsVerificationOnPatientChart</td> 
+  <td>main@1734161410</td>   <td></td> </tr>
 </table>
